--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <!-- Company logo -->
                 <div class="flex items-center space-x-3">
                     <!-- TO REPLACE: Change this image URL to your local image path -->
-                    <img src="https://lookaside.fbsbx.com/lookaside/crawler/instagram/eyediction_opticals/profile_pic.jpg" 
+                    <img src="https://i.imgur.com/yOXrs7i.png" 
                          alt="Eyediction Opticals Logo" class="w-10 h-10 rounded-full logo-animation">
                     <div>
                         <h1 class="text-xl font-bold text-black">Eyediction Opticals</h1>
@@ -357,7 +357,7 @@
                              alt="Professional optical store" class="w-full h-full object-cover">
                     </div>
                     <div class="flex-shrink-0 w-80 h-64 gallery-item">
-                        <img src="https://lookaside.fbsbx.com/lookaside/crawler/instagram/eyediction_opticals/profile_pic.jpg" 
+                        <img src="https://i.imgur.com/yOXrs7i.png" 
                              alt="Eyediction Logo" class="w-full h-full object-cover">
                     </div>
                     <!-- Duplication for continuous effect -->
@@ -499,7 +499,7 @@
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
                         <!-- TO REPLACE: Change this image URL to your local image path -->
-                        <img src="https://lookaside.fbsbx.com/lookaside/crawler/instagram/eyediction_opticals/profile_pic.jpg" 
+                        <img src="https://i.imgur.com/yOXrs7i.png" 
                              alt="Eyediction Opticals Logo" class="w-10 h-10 rounded-full">
                         <div>
                             <h3 class="text-xl font-bold">Eyediction Opticals</h3>
