--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
                         <!-- TO REPLACE: Change this image URL to your local image path -->
-                        <img src="https://i.imgur.com/yOXrs7i.png" 
+                        <img src="https://i.imgur.com/UMdPyvB.jpeg" 
                              alt="Eyediction Opticals Logo" class="w-10 h-10 rounded-full">
                         <div>
                             <h3 class="text-xl font-bold">Eyediction Opticals</h3>
