--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                             <span class="text-gray-700">+250 783 977 577</span>
                         </div>
                         <div class="flex items-center space-x-3">
-                            <i class="fas fa-instagram text-black"></i>
-                            <span class="text-gray-700">@eyediction_opticals</span>
+                            <i class="fab fa-instagram text-black-400"></i>
+                            <a href="https://www.instagram.com/eyediction_opticals/" target="_blank" class="text-black-400 hover:text-black transition-colors">@eyediction_opticals</a>
                         </div>
                         <div class="flex items-center space-x-3">
                             <i class="fas fa-map-marker-alt text-black"></i>
