--- a/index.html
+++ b/index.html
@@ -713,5 +713,6 @@
         console.log('   - Main hero image');
         console.log('   - Gallery images (4 different images)');
     </script>
+    <div style="padding-bottom: 100px;"></div>
 </body>
 </html>
