--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
+        <style>
+  body {
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
+  .hero, .section-header {
+    overflow: visible;
+    padding-bottom: 80px;
+  }
+</style>
         /* Custom styles for the site */
         body {
             font-family: 'Poppins', sans-serif;
@@ -713,6 +724,5 @@
         console.log('   - Main hero image');
         console.log('   - Gallery images (4 different images)');
     </script>
-    <div style="padding-bottom: 100px;"></div>
 </body>
 </html>
