--- a/index.html
+++ b/index.html
@@ -11,16 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <style>
-        <style>
-  body {
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
-
-  .hero, .section-header {
-    overflow: visible;
-    padding-bottom: 80px;
-  }
         /* Custom styles for the site */
         body {
             font-family: 'Poppins', sans-serif;
@@ -91,6 +81,17 @@
             50% { transform: scale(1.05); }
             100% { transform: scale(1); }
         }
+        <style>
+  body {
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
+  .hero, .section-header {
+    overflow: visible;
+    padding-bottom: 80px;
+  }
+</style>
     </style>
 </head>
 
